--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://ppete2.github.io/Leaflet.PolylineMeasure/Leaflet.PolylineMeasure.css"
+    />
+
     <link rel="stylesheet" href="styles.css" />
     <title>What's The Weather?</title>
   </head>
@@ -22,17 +27,22 @@
       <input id="city" type="text" placeholder="city" />
       <p>or</p>
       <button class="gps">By Location</button>
+      <button class="reset">Reset</button>
     </div>
     <div class="shell">
       <div class="container">
         <div class="display"></div>
-        <div id="map"></div>
+        <div class="map-container"><div id="map"></div></div>
       </div>
     </div>
     <script defer src="script.js"></script>
     <script
       defer
       src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    ></script>
+    <script
+      defer
+      src="https://ppete2.github.io/Leaflet.PolylineMeasure/Leaflet.PolylineMeasure.js"
     ></script>
   </body>
 </html>
