need to impliment list for each workout

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
-    <title>What's The Weather?</title>
+    <title>Running Planner and Log</title>
   </head>
   <body>
     <div class="places">
       <input id="city" type="text" placeholder="city" />
-      <p>or</p>
-      <button class="gps">By Location</button>
       <button class="reset">Reset</button>
     </div>
     <div class="shell">
