--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
-    <title>Running Planner and Log</title>
+    <title>Runners Log</title>
   </head>
   <body>
+    <div class="modal hidden">
+      <!-- <p class="date"></p>
+      <p class="distance"></p>
+      <p class="weather"></p>
+      <input type="text" class="time" placeholder="How long were you running?">
+      <button class="add">Add</button> -->
+    </div>
+    <ul class="workout-list"></ul>
     <div class="places">
       <input id="city" type="text" placeholder="city" />
       <button class="reset">Reset</button>
@@ -30,7 +38,7 @@
     <div class="shell">
       <div class="container">
         <div class="display"></div>
-        <div class="map-container"><div id="map"></div></div>
+        <div class="map-container"><div id="map">
       </div>
     </div>
     <script defer src="script.js"></script>
