bug on loading workout list

--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
     <title>Runners Log</title>
   </head>
   <body>
-    <ul class="workout-list"></ul>
+    <ul class="workout-list">    
+
+    </ul>
     <div class="places">
       <input id="city" type="text" placeholder="enter city to start" />
       <button class="add-manual">Manual Add</button>
-      <button class="reset">Reset</button>
-    </div>
-    <div class="modal-shell"><div class="modal hidden"></div></div>
+      <button class="reset">Reset Map</button>
+      <button class="clear">Clear Workouts</button>
+    </div><div class="modal hidden"></div>
     <div class="shell">
       <div class="container">
         <div class="display"></div>
