add some responsiveness

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <title>Runners Log</title>
   </head>
   <body>
-    <ul class="workout-list">    
-
-    </ul>
+    <div class="workout-list hide">    
+    </div>
     <div class="places">
       <input id="city" type="text" placeholder="enter city to start" />
       <button class="add-manual">Manual Add</button>
       <button class="reset">Reset Map</button>
       <button class="clear">Clear Workouts</button>
+      <button class="show">Toggle Workouts</button>
     </div><div class="modal hidden"></div>
     <div class="shell">
       <div class="container">
